plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.16'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.github.juglee0527'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-database-postgresql'

    runtimeOnly 'org.postgresql:postgresql'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.testcontainers:junit-jupiter'
    testImplementation 'org.testcontainers:postgresql'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform {
        excludeTags 'performance'
    }
}

tasks.register('performanceTest', Test) {
    description = 'Runs isolated scheduling performance baselines.'
    group = 'verification'
    testClassesDirs = sourceSets.test.output.classesDirs
    classpath = sourceSets.test.runtimeClasspath
    useJUnitPlatform {
        includeTags 'performance'
    }
    shouldRunAfter tasks.named('test')
    outputs.upToDateWhen { false }
    testLogging {
        showStandardStreams = true
    }
    if (providers.gradleProperty('performanceJfr').isPresent()) {
        def recordingFile = layout.buildDirectory.file(
                'reports/performance/forward-scheduler.jfr'
        ).get().asFile
        doFirst {
            recordingFile.parentFile.mkdirs()
        }
        jvmArgs(
                '-Dperformance.profile=true',
                '-XX:StartFlightRecording=filename='
                        + recordingFile.absolutePath.replace('\\', '/')
                        + ',settings=profile,dumponexit=true'
        )
    }
}
